# agent-nexus

./: .gitignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  PERF_SECURITY_REPORT.md  README.md  README.zh.md  SUGGESTION.md  agentnexus.spec  eval_routes.json  plan.md  pyproject.toml  requirements.txt
agentnexus/: .gitignore  AGENTS.md  API.md  CLAUDE.md  README.md  __main__.py  agentnexus.spec  pyproject.toml  react_example.py  requirements.txt  test_all.py  test_eval_routes.py  test_grep.py
agentnexus/.claude/: settings.local.json
agentnexus/.github/workflows/: ci.yml
agentnexus/.omc/: prd.json  progress.txt  project-memory.json
agentnexus/.omc/state/: agent-replay-e9a3f640-5048-44ef-9a0a-8aeb5c5edf92.jsonl  last-tool-error.json  mission-state.json  subagent-tracking.json
agentnexus/.test_agentnexus/: memory.db
agentnexus/.test_agentnexus/chroma/: chroma.sqlite3
agentnexus/agentnexus.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
agentnexus/agentnexus/agents/: analyst_agent.py  coder_agent.py  critic_agent.py  critic_rules.py  executor_agent.py  re_act_agent.py  react_types.py  research_agent.py  retry_manager.py  schema.py
agentnexus/agentnexus/cli/: __init__.py  audit.py  chat.py  config.py  eval_cmd.py  kb.py  logs.py  memory_cmd.py  run.py  stats.py  tui_cmd.py
agentnexus/agentnexus/core/: budget.py  capabilities.py  config.py  judge_llm.py  llm.py  model_router.py
agentnexus/agentnexus/evaluation/: agent_eval.py  coherence.py  component.py  hallucination.py  trajectory.py
agentnexus/agentnexus/memory/: long_term.py  manager.py  short_term.py  versioned.py
agentnexus/agentnexus/observability/: __init__.py  stats.py  tracer.py
agentnexus/agentnexus/prompts/: __init__.py  analyst.txt  coder.txt  contextual.txt  critic.txt  eval_faithfulness.txt  eval_generate.txt  eval_precision.txt  eval_relevancy.txt  memory_extract.txt  memory_summarize.txt  planner.txt  react.txt  research.txt  research_sufficiency.txt
agentnexus/agentnexus/rag/: __init__.py  chroma_client.py  chunking.py  eval_dataset.py  evaluator.py  grep_search.py  ingestion.py  retriever.py  router.py
agentnexus/agentnexus/tools/: __init__.py  code_executor.py  kb_search.py  memory_save.py  memory_search.py  registry.py  shell.py  tool_executor.py  tool_wrapper.py  web_search.py
agentnexus/agentnexus/tui/: app.py
agentnexus/agents/: exceptions.py  fsm.py  json_helpers.py  llm_strategy.py  prompt_builder.py  re_act_agent.py  react_runtime.py  react_transitions.py  react_types.py  tool_runner.py
agentnexus/app/: __init__.py  runtime.py
agentnexus/builtin_extensions/: README.md
agentnexus/capabilities/: __init__.py  runtime.py
agentnexus/cli/: __init__.py  audit.py  codegraph.py  config.py  eval_cmd.py  kb.py  logs.py  memory_cmd.py  serve_cmd.py  sessions.py  skill_cmd.py  stats.py  tui_cmd.py
agentnexus/cli/eval/: __init__.py  agent.py  calibrate.py  code_bench.py  common.py  rag.py  stats.py  trace.py
agentnexus/codegraph/: __init__.py  cli.py  embeddings.py  hooks.py  models.py  parser.py  queries.py  store.py  updater.py  vector_store.py
agentnexus/codegraph/parsers/: __init__.py  python_parser.py
agentnexus/core/: __init__.py  capabilities.py  config.py  hooks.py  judge_llm.py  llm.py  pii.py  pricing.py  text_utils.py
agentnexus/core/providers/: __init__.py  base.py  openai_provider.py  router.py
agentnexus/evaluation/: agent_eval.py  coherence.py  component.py  hallucination.py  humaneval.py  swebench.py  tool_selection.py  trajectory.py  utils.py
agentnexus/extensions/: __init__.py  manager.py
agentnexus/memory/: compaction.py  extraction.py  long_term.py  manager.py  offload.py  projection.py  short_term.py  todo.py  versioned.py
agentnexus/observability/: __init__.py  audit_log.py  stats.py  tracer.py
agentnexus/prompts/: __init__.py  contextual.txt  contextual_generation.txt  contextual_retrieval.txt  eval_answer_relevancy.txt  eval_faithfulness.txt  eval_quality_batch.txt  eval_recall.txt  eval_relevancy.txt  rag_hyde.txt  rag_multi_query.txt  rag_query_rewrite.txt  react.txt  react_think.txt
agentnexus/prompts/fragments/: security.txt
agentnexus/rag/: __init__.py  chroma_client.py  chunking.py  citations.py  embeddings.py  eval_dataset.py  evaluator.py  ids.py  ingestion.py  kb_service.py  loaders.py  models.py  query_expansion.py  ranking.py  retriever.py  store.py
agentnexus/rag/loaders/: __init__.py  common.py  html.py  json_loader.py  markdown.py  office.py  pdf.py  text.py
agentnexus/server/: app.py  auth.py  error_handlers.py  pagination.py  rate_limit.py
agentnexus/server/routes/: audit.py  chat.py  codegraph.py  config.py  eval_routes.py  knowledge.py  mcp.py  memory.py  runtime.py  skills.py  stats.py  version.py
agentnexus/services/: __init__.py  chat.py  config.py  container.py  eval.py  knowledge.py  skill.py  turn.py
agentnexus/skills/: __init__.py  profile.py  registry.py  router.py  runtime.py  workflow.py
agentnexus/skills/router/: __init__.py  decide.py  llm_decider.py  llm_fallback.py  normalize.py  parse.py  rank.py  retrieve.py  telemetry.py  types.py
agentnexus/storage/: __init__.py  chroma.py
agentnexus/tests/: conftest.py
agentnexus/tests/integration/: test_cli.py  test_orchestrator.py
agentnexus/tests/regression/: test_regression.py
agentnexus/tests/unit/: test_calling_strategy.py  test_capabilities.py  test_config.py  test_kb_search_tool.py  test_long_term.py  test_memory_context.py  test_rag_retriever.py  test_react_action_parse.py  test_router.py  test_short_term.py  test_trace.py  test_versioned.py  (+1 more)
agentnexus/tools/: __init__.py  code_executor.py  confirm_bridge.py  file_ops.py  grep_search.py  kb_search.py  mcp_adapter.py  mcp_call.py  mcp_capabilities.py  mcp_connection.py  mcp_descriptors.py  mcp_health.py  mcp_lifecycle.py  mcp_result.py  mcp_schema.py  memory_save.py  memory_search.py  providers.py  registry.py  result_format.py  shell.py  subagent.py  tool_executor.py  tool_wrapper.py  web_search.py
agentnexus/tui/: app.py
(+372 files in other folders)
