[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agentnexus"
version = "0.1.0"
description = "ReAct 单智能体任务协同 CLI 工具"
license = {text = "MIT"}
readme = "README.md"
authors = [{name = "AgentNexus Team"}]
requires-python = ">=3.11"
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "litellm>=1.60,<3",
    "openai>=1.50,<3",
    "tiktoken>=0.7",
    "pydantic>=2.10,<3",
    "pydantic-settings>=2",
    "pyyaml>=6",
    "typer>=0.12",
    "rich>=13",
    "langchain-text-splitters>=0.3",
    "httpx>=0.27",
    "mcp>=1.0",
    "prompt-toolkit>=3",
]

[project.urls]
Changelog = "https://github.com/agentnexus/agentnexus/releases"

[project.scripts]
nexus = "agentnexus.cli:main"

[project.optional-dependencies]
rag = [
    "sentence-transformers>=4.0",
    "chromadb>=1.0,<3",
    "pymupdf>=1.24",
    "jieba>=0.42",
    "rank-bm25>=0.2",
]
server = [
    "fastapi>=0.115",
    "uvicorn>=0.34",
]
search = ["tavily-python>=0.5"]
sandbox = ["e2b-code-interpreter>=1.0"]
tui = ["textual>=8.0"]
all = [
    "agentnexus[rag,server,search,sandbox,tui]",
]
dev = ["pytest>=8", "pytest-mock>=3", "pytest-cov>=5", "ruff>=0.3"]
eval = ["pytest>=8", "ruff>=0.3", "pyinstaller>=6"]

[tool.setuptools.packages.find]
include = ["agentnexus*"]
exclude = ["blog*"]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
markers = [
    "perf: performance/benchmark tests (use --benchmark-only to run without functional tests)",
    "e2e: end-to-end tests requiring real LLM API key (use --run-e2e to enable)",
]

[tool.coverage.run]
source = ["agentnexus"]
omit = ["*/tests/*", "agentnexus/rag/eval_dataset.py"]

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pyinstaller]
# PyInstaller build config — uses agentnexus.spec for full control
# Run: pyinstaller agentnexus.spec --noconfirm
