[project]
name = "agentnexus"
version = "0.1.0"
description = "企业级多智能体任务协同 CLI 工具"
requires-python = ">=3.11"
changelog = "https://github.com/agentnexus/agentnexus/releases"

dependencies = [
    "openai>=1.0",
    "pydantic>=2",
    "pydantic-settings>=2",
    "pyyaml>=6",
    "typer>=0.12",
    "rich>=13",
    "langgraph>=1.0",
    "langgraph-checkpoint-sqlite>=0.1",
    "langchain-text-splitters>=0.3",
    "sentence-transformers>=3.0",
    "chromadb>=0.5",
    "pymupdf>=1.24",
    "jieba>=0.42",
    "rank-bm25>=0.2",
    "serpapi>=0.1",
    "e2b-code-interpreter>=1.0",
    "httpx>=0.27",
]

[project.scripts]
nexus = "agentnexus.cli:app"

[project.optional-dependencies]
dev = ["pytest>=8", "ruff>=0.3"]
eval = ["pytest>=8", "ruff>=0.3", "pyinstaller>=6"]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pyinstaller]
# PyInstaller build config — uses agentnexus.spec for full control
# Run: pyinstaller agentnexus.spec --noconfirm
